fixed page overflow

--- a/PersonalWebsite/styles.css
+++ b/PersonalWebsite/styles.css
@@ -49,7 +49,7 @@ nav{
 
 .projects_container{
     display: grid;
-    grid-template-columns: 35% 35% 30%;
+    grid-template-columns: 35% 35% 20%;
     grid-template-rows: repeat(4, 20%);
 
     gap: 30px 50px;
